# mlops_proj

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yaml
docs/source/: index.md
mlops_proj/: __init__.py
mlops_proj/data/: make_dataset.py
notebooks/: testing.ipynb
